--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,11 +1,27 @@
-/*
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
 }
 
-#flex-container {
+#root, #root>div{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+h1{
+	margin: 10px;
+}
+
+/*#flex-container {
   display: flex
 }
 
